# cad_demo

./: CMakeLists.txt
examples/: example.rar  gen_regions_image.hdev
examples/example/: configure.db  im.dxf  items.dxf
src/: CMakeLists.txt  arc_entity.cc  arc_entity.h  circle_entity.cc  circle_entity.h  dxf_importer.cc  dxf_importer.h  entity.cc  entity.h  entity_view.cc  entity_view.h  line_entity.cc  line_entity.h  main.cc  main_window.cc  main_window.h
ts/: cadplan_zh-cn.qm  cadplan_zh-cn.ts
